--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Demo",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Test working\" && exit 1"
+    "test": "echo \"Test working\" "
   },
   "author": "Aj",
   "license": "ISC"
